fix nav height on mobile

--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -215,7 +215,7 @@
     +maxWidth768()
       margin-bottom: -12px;
       transition: 0s !important
-      min-height: 450px;
+      // min-height: 450px;
       &.nav-fixed
         #nav
           background: var(--anzhiyu-card-bg);
